--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,25 @@
-.container-header {
-  grid-column: 1 / -1;
-  grid-row: 2 / 3;
-  background: url("../img/residential-big.jpg") center no-repeat;
-  background-size: cover;
-  min-width: 100%;
-  min-height: 100%;
-  text-align: center;
-  color: #000; }
-  .container-header-hero--main {
-    /* h1 tag */
-    position: absolute;
-    padding-top: 3rem;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: 5rem;
-    /* glitch does not recognize $bp-medium */ }
-    @media only screen and (max-width: 50em) {
-      .container-header-hero--main {
-        font-size: 4rem; } }
-
-.hero-main {
-  overflow: hidden;
-  display: block;
-  position: relative;
-  text-align: center;
-  width: 15rem;
-  color: #fff;
-  background-color: rgba(0, 0, 0, 0.6); }
+@import url("https://fonts.googleapis.com/css?family=Work+Sans:300,600");
+:root {
+  --background: rgba(255, 255, 255, 0.85);
+  --black: #000;
+  --orange: #f26722;
+  --yellow: #f5e608;
+  --white: #fff;
+  --blackRGBA: rgba(0, 0, 0, 0.61);
+  --gradientWhite: linear-gradient(
+		0deg,
+		rgb(211, 211, 211) 0%,
+		rgb(255, 255, 255) 100%
+	);
+  --gradientBlack: linear-gradient(0deg,rgba(82, 82, 82, 1))
+	/* radius */
+	--smRad: 3px;
+  --mdRad: 5px;
+  --lgRad: 7px;
+  --bpLargest: 75em;
+  --bpLarge: 62.5em;
+  --bpMedium: 50em;
+  --bpSmallest: 37.5em; }
 
 *,
 *::before,
@@ -47,7 +36,7 @@ html {
       font-size: 50%; } }
 
 body {
-  font-family: "Josefin Sans", sans-serif;
+  font-family: "Lato", sans-serif;
   color: #6d5d4b;
   font-weight: 300;
   line-height: 1.6;
@@ -56,110 +45,323 @@ body {
 .container {
   display: grid;
   /* top to bottom */
-  grid-template-rows: 4rem 90vh min-content 40vw repeat(3, min-content);
+  grid-template-rows: 4rem 100vh repeat(5, min-content);
   /* left to right */
   grid-template-columns: [grid-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [grid-end];
   /*gap: 1rem 1rem;*/ }
 
-.container-nav {
-  background-color: #f9f7f6;
-  grid-column: 1 / -1;
-  grid-row: 1 / 2;
-  width: 100%;
-  padding: 0.8rem 1rem;
-  position: fixed;
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-  flex-wrap: wrap;
-  z-index: 100;
-  letter-spacing: 0.4rem;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12); }
-  @media only screen and (max-width: 50em) {
-    .container-nav {
-      /* use when there is no hamburger
-		flex-direction: column;
-		align-items: center;
-		*/ } }
-  .container-nav-sub--left {
-    display: block;
-    font-size: 2rem;
-    transition: 0.3s; }
-    @media only screen and (max-width: 50em) {
-      .container-nav-sub--left {
-        margin-bottom: 1rem;
-        font-size: 1.8rem; } }
-    .container-nav-sub--left > a {
-      text-decoration: none;
-      color: #101d2c;
-      padding: 0 1rem; }
-    .container-nav-sub--left:hover {
-      background: #d1d0d0; }
-  .container-nav-sub--right {
-    display: flex;
-    font-size: 1.2rem; }
-    .container-nav-sub--right > i {
-      display: none; }
-      @media only screen and (max-width: 50em) {
-        .container-nav-sub--right > i {
-          display: block;
-          font-size: 3rem; }
-          .container-nav-sub--right > i:hover {
-            border: solid 2px #000; } }
-    .container-nav-sub--right > a {
-      padding: 0 1rem;
-      margin: 0 1rem;
-      border-radius: 30px;
-      border: solid 1px #000;
-      text-decoration: none;
-      color: #101d2c;
-      transition: 0.3s; }
-      @media only screen and (max-width: 50em) {
-        .container-nav-sub--right > a {
-          /*
-				margin: 3px auto;
-				font-size: 1.8rem;
-				*/
-          display: none; } }
-      .container-nav-sub--right > a:hover {
-        background: #d1d0d0; }
-
-.container-services {
-  grid-column: 1 / -1;
-  grid-row: 3 / 4;
-  min-width: 30%;
-  display: flex;
-  justify-content: space-around;
-  padding: 1rem;
-  font-size: 1.8rem;
-  color: #c03232;
-  background: #fff; }
-  @media only screen and (max-width: 50em) {
-    .container-services {
-      flex-direction: column; } }
-
-.multi-column-container {
-  padding: 1rem;
-  background: #000;
-  border: solid #fff;
-  box-shadow: 0 3px 5px #000;
-  height: 100%; }
-  .multi-column-container--items {
-    font-size: 1.6rem;
-    color: #02383f;
-    padding: 1rem;
-    background: #4e526b;
-    list-style-type: none; }
-
-/* */
-.container-projects {
-  display: none; }
-
-.container-about {
-  display: none; }
-
 .container-contact {
   display: none; }
 
-.w3-container {
+.contact {
   display: none; }
+
+button {
+  display: none; }
+
+.container-header {
+  grid-column: 1 / -1;
+  grid-row: 2 / 3;
+  position: fixed;
+  background: url("../img/house-1.jpeg") center no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  color: #000;
+  z-index: -1; }
+  .container-header-hero--main {
+    /* h1 tag */
+    padding-top: 3rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    @media only screen and (max-width: 50em) {
+      .container-header-hero--main {
+        font-size: 4rem; } }
+
+.hero-main {
+  overflow: hidden;
+  display: block;
+  position: relative;
+  text-align: center;
+  width: 15rem;
+  color: #fff;
+  font-size: 6rem;
+  background-color: rgba(0, 0, 0, 0.6); }
+
+.hero-sub {
+  color: var(--white);
+  display: inline-block;
+  font-size: 4rem;
+  letter-spacing: 1.75rem; }
+
+h2 {
+  text-align: center; }
+
+/* new */
+/* navigation styles start here */
+.header {
+  grid-column: 1 / -1;
+  grid-row: 1 / 2;
+  position: fixed;
+  height: 10vh;
+  width: 100%;
+  background: var(--background);
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  text-align: center;
+  z-index: 999; }
+
+/* makes it tabbable */
+.nav-toggle {
+  position: absolute !important;
+  top: -9999px !important;
+  left: -9999px !important; }
+  .nav-toggle:focus ~ .nav-toggle-label {
+    outline: 2px solid rgba(173, 216, 230, 0.75); }
+  .nav-toggle-label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 2rem 0 0 1rem;
+    padding: 0 1rem;
+    height: 50%;
+    display: flex;
+    align-items: center; }
+
+.nav-toggle-label span,
+.nav-toggle-label span::before,
+.nav-toggle-label span::after {
+  display: block;
+  background: black;
+  height: 2px;
+  width: 2em;
+  border-radius: 2px;
+  position: relative; }
+
+.nav-toggle-label span::before,
+.nav-toggle-label span::after {
+  content: "";
+  position: absolute; }
+
+.nav-toggle-label span::before {
+  bottom: 7px; }
+
+.nav-toggle-label span::after {
+  top: 7px; }
+
+nav {
+  position: absolute;
+  text-align: left;
+  top: 100%;
+  left: 0;
+  background: var(--background);
+  width: 100%;
+  transform: scale(1, 0);
+  transform-origin: top;
+  transition: transform 400ms ease-in-out; }
+  nav ul {
+    margin: 0;
+    padding: 0;
+    list-style: none; }
+  nav li {
+    margin-bottom: 1em;
+    margin-left: 1em;
+    width: 100%; }
+  nav a {
+    color: var(--black);
+    text-decoration: none;
+    font-size: 1.3rem;
+    text-transform: uppercase;
+    opacity: 0;
+    border-radius: var(--smRad); }
+    nav a:before {
+      content: "";
+      border-left: solid 3px #f9d527;
+      padding-right: 0.5rem; }
+    nav a:hover {
+      background: rgba(78, 78, 78, 0.2); }
+    nav a:active {
+      background: rgba(0, 0, 0, 0.4);
+      color: #fff; }
+
+.nav-toggle:checked ~ nav {
+  transform: scale(1, 1); }
+  .nav-toggle:checked ~ nav a {
+    opacity: 1;
+    transition: opacity 250ms ease-in-out 250ms; }
+
+.logo {
+  grid-column: 2 / 3;
+  margin: 2.3rem 0; }
+
+/* big size  overwrites small size */
+@media screen and (min-width: 50em) {
+  .nav-toggle-label {
+    display: none; }
+  .header {
+    display: grid;
+    grid-template-columns: 1fr auto minmax(600px, 3fr) 8rem; }
+  .logo {
+    grid-column: 1 / 2;
+    margin: auto 0; }
+  .nav {
+    position: relative;
+    text-align: left;
+    transition: none;
+    transform: scale(1, 1);
+    background: none;
+    top: initial;
+    left: initial;
+    /* end Edge support */
+    grid-column: 3 / 4;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center; }
+    .nav ul {
+      display: flex; }
+    .nav li {
+      margin-left: 3em;
+      margin-bottom: 0; }
+    .nav a {
+      opacity: 1;
+      position: relative; }
+      .nav a::before {
+        content: "";
+        display: block;
+        height: 5px;
+        background: #f9d527;
+        position: absolute;
+        top: -0.75em;
+        left: 0;
+        right: 0;
+        transform: scale(0, 1);
+        transition: transform ease-in-out 250ms; }
+      .nav a:hover::before {
+        border-left: none;
+        transform: scale(1, 1); }
+      .nav a:hover {
+        background: none; }
+      .nav a:active {
+        background: rgba(0, 0, 0, 0.7);
+        color: var(--white); } }
+
+.main-gallery {
+  display: none; }
+
+.container-projects {
+  display: none; }
+
+.card-container {
+  grid-column: 1 / -1;
+  grid-row: 4 / 5;
+  background-color: #fff;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  padding: 15rem 0 15rem 0;
+  color: black; }
+
+.card {
+  position: relative;
+  height: 52rem;
+  width: 90%; }
+  .card__side {
+    height: 52rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    border-radius: 3px;
+    overflow: hidden;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+    .card__side--upper {
+      background-color: #fff; }
+    .card__side--bottom {
+      clip-path: polygon(0 15%, 100% 0, 100% 100%, 0% 100%); }
+      .card__side--bottom-1 {
+        background-image: linear-gradient(to right bottom, black, #273463); }
+      .card__side--bottom-2 {
+        background-image: linear-gradient(to right bottom, black, #09568a); }
+      .card__side--bottom-3 {
+        background-image: linear-gradient(to right bottom, black, #273463); }
+  .card__picture {
+    background-size: cover;
+    height: 23rem;
+    background-blend-mode: screen;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px; }
+    .card__picture--1 {
+      background-image: linear-gradient(to right bottom, black, #273463), url(../img/gal-1.jpeg); }
+    .card__picture--2 {
+      background-image: linear-gradient(to right bottom, black, #09568a), url(../img/gal-2.jpeg); }
+    .card__picture--3 {
+      background-image: linear-gradient(to right bottom, black, #273463), url(../img/gal-3.jpeg); }
+  .card__heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    text-align: right;
+    color: #fff;
+    position: absolute;
+    top: 12rem;
+    right: 2rem;
+    width: 75%; }
+  .card__heading-span {
+    padding: 1rem 1.5rem;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone; }
+    .card__heading-span--1 {
+      background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.85), rgba(39, 52, 99, 0.85)); }
+    .card__heading-span--2 {
+      background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.85), rgba(9, 86, 138, 0.85)); }
+    .card__heading-span--3 {
+      background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.85), rgba(39, 52, 99, 0.85)); }
+  .card__details {
+    padding: 3rem; }
+    .card__details ul {
+      list-style: none;
+      width: 80%;
+      margin: 0 auto; }
+      .card__details ul li {
+        text-align: center;
+        font-size: 1.5rem;
+        padding: 1rem; }
+        .card__details ul li:not(:last-child) {
+          border-bottom: 1px solid #aaa; }
+  .card__cta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    text-align: center; }
+    .card__cta a {
+      color: #fff; }
+  @media only screen and (max-width: 56.25em) {
+    .card {
+      height: auto;
+      border-radius: 3px;
+      background-color: #fff;
+      box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+      .card__side {
+        height: auto;
+        position: relative;
+        box-shadow: none; }
+      .card__details {
+        padding: 1rem 3rem; }
+      .card__cta {
+        position: relative;
+        top: 0%;
+        left: 0;
+        transform: translate(0);
+        width: 100%;
+        padding: 7rem 4rem 4rem 4rem; } }
