--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -1,77 +1,189 @@
-.container-nav {
-	background-color: $color-primary;
+/* new */
+/* navigation styles start here */
+
+.header {
 	grid-column: 1 / -1;
 	grid-row: 1 / 2;
 
-	width: 100%;
-	padding: 0.8rem 1rem;
-
 	position: fixed;
-	display: flex;
-	justify-content: space-between;
-	align-items: baseline;
-	flex-wrap: wrap;
-	z-index: 100;
 
-	letter-spacing: 0.4rem;
-	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
-		0 2px 10px 0 rgba(0, 0, 0, 0.12);
+	height: 10vh;
+	width: 100%;
 
-	@media only screen and (max-width: $bp-medium) {
-		/* use when there is no hamburger
-		flex-direction: column;
-		align-items: center;
-		*/
+	background: var(--background);
+	// box-shadow: 0 1px 3px $color-black;
+	box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+
+	text-align: center;
+
+	z-index: 999;
+}
+
+/* makes it tabbable */
+.nav-toggle {
+	position: absolute !important;
+	top: -9999px !important;
+	left: -9999px !important;
+	&:focus ~ .nav-toggle-label {
+		outline: 2px solid rgba(lightblue, 0.75);
 	}
+	&-label {
+		position: absolute;
+		top: 0;
+		left: 0;
+		margin: 2rem 0 0 1rem;
+		padding: 0 1rem;
+		height: 50%;
+		display: flex;
+		align-items: center;
+	}
+}
 
-	&-sub--left {
-		display: block;
-		font-size: 2rem;
-		transition: 0.3s;
-		@media only screen and (max-width: $bp-medium) {
-			margin-bottom: 1rem;
-			font-size: 1.8rem;
-		}
-		& > a {
-			text-decoration: none;
-			color: $color-secondary;
-			padding: 0 1rem;
+.nav-toggle-label span,
+.nav-toggle-label span::before,
+.nav-toggle-label span::after {
+	display: block;
+	background: rgb(0, 0, 0);
+	height: 2px;
+	width: 2em;
+	border-radius: 2px;
+	position: relative;
+}
+
+.nav-toggle-label span::before,
+.nav-toggle-label span::after {
+	content: "";
+	position: absolute;
+}
+
+.nav-toggle-label span::before {
+	bottom: 7px;
+}
+
+.nav-toggle-label span::after {
+	top: 7px;
+}
+
+nav {
+	position: absolute;
+	text-align: left;
+	top: 100%;
+	left: 0;
+	background: var(--background);
+	width: 100%;
+	transform: scale(1, 0);
+	transform-origin: top;
+	transition: transform 400ms ease-in-out;
+	& ul {
+		margin: 0;
+		padding: 0;
+		list-style: none;
+	}
+	& li {
+		margin-bottom: 1em;
+		margin-left: 1em;
+		width: 100%;
+	}
+	& a {
+		color: var(--black);
+		text-decoration: none;
+		font-size: 1.3rem;
+		text-transform: uppercase;
+		opacity: 0;
+		// padding: 0.8rem;
+		border-radius: var(--smRad);
+		&:before {
+			content: "";
+			// border-left: solid 3px orange;
+			border-left: solid 3px #f9d527;
+			padding-right: 0.5rem;
 		}
 		&:hover {
-			background: $color-grey-light-1;
+			background: rgba(78, 78, 78, 0.2);
+		}
+		&:active {
+			background: rgba(0, 0, 0, 0.4);
+			color: #fff;
 		}
 	}
+}
 
-	&-sub--right {
+.nav-toggle:checked ~ nav {
+	transform: scale(1, 1);
+	& a {
+		opacity: 1;
+		transition: opacity 250ms ease-in-out 250ms;
+	}
+}
+
+.logo {
+	grid-column: 2 / 3;
+	margin: 2.3rem 0;
+}
+
+/* big size  overwrites small size */
+@media screen and (min-width: $bp-medium) {
+	.nav-toggle-label {
+		display: none;
+	}
+
+	.header {
+		display: grid;
+		grid-template-columns: 1fr auto minmax(600px, 3fr) min(8rem);
+	}
+
+	.logo {
+		grid-column: 1 / 2;
+		margin: auto 0;
+	}
+
+	.nav {
+		// all: unset; /* this causes issues with Edge, since it's unsupported */
+		position: relative;
+		text-align: left;
+		transition: none;
+		transform: scale(1, 1);
+		background: none;
+		top: initial;
+		left: initial;
+		/* end Edge support */
+
+		grid-column: 3 / 4;
 		display: flex;
-		font-size: 1.2rem;
-		& > i {
-			display: none;
-			@media only screen and(max-width: $bp-medium) {
-				display: block;
-				font-size: 3rem;
-				&:hover {
-					border: solid 2px #000;
-				}
-			}
+		justify-content: flex-end;
+		align-items: center;
+		& ul {
+			display: flex;
 		}
-		& > a {
-			padding: 0 1rem;
-			margin: 0 1rem;
-			border-radius: 30px;
-			border: solid 1px #000;
-			text-decoration: none;
-			color: $color-secondary;
-			transition: 0.3s;
-			@media only screen and (max-width: $bp-medium) {
-				/*
-				margin: 3px auto;
-				font-size: 1.8rem;
-				*/
-				display: none;
+		& li {
+			margin-left: 3em;
+			margin-bottom: 0;
+		}
+		& a {
+			opacity: 1;
+			position: relative;
+			&::before {
+				content: "";
+				display: block;
+				height: 5px;
+				background: #f9d527;
+				position: absolute;
+				top: -0.75em;
+				left: 0;
+				right: 0;
+				transform: scale(0, 1);
+				transition: transform ease-in-out 250ms;
+			}
+			&:hover::before {
+				border-left: none;
+				transform: scale(1, 1);
 			}
 			&:hover {
-				background: $color-grey-light-1;
+				background: none;
+			}
+			&:active {
+				background: rgba(0, 0, 0, 0.7);
+				color: var(--white);
 			}
 		}
 	}
