--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,11 +1,12 @@
 .container-header {
-	grid-column: 1 / -1;
-	grid-row: 2 / 3;
+	// grid-column: 1 / -1;
+	// grid-row: 2 / 3;
 
 	position: fixed;
 
-	background: url("../img/house-1.jpeg") center no-repeat;
-	background-size: cover;
+	// background: url("../img/house-1.jpeg") center no-repeat;
+	// background-size: cover;
+	background-color: $color-white;
 
 	width: 100%;
 	height: 100%;
@@ -43,6 +44,8 @@
 	color: #fff;
 	font-size: 6rem;
 	background-color: rgba(0, 0, 0, 0.6);
+
+	border-radius: 50%;
 }
 
 .hero-sub {
