--- a/sass/_testimonial.scss
+++ b/sass/_testimonial.scss
@@ -1,6 +1,6 @@
-.contact__header {
+.testimonial__header {
 	grid-column: 1 / -1;
-	grid-row: 7 / 8;
+	grid-row: 9 / 10;
 	width: 100%;
 	padding: 6rem;
 
@@ -33,9 +33,9 @@
 	}
 }
 
-.contact__container {
+.testimonial__container {
 	grid-column: 1 / -1;
-	grid-row: 8 / 9;
+	grid-row: 10 / 11;
 
 	// height: auto;
 	height: 100vh;
@@ -54,6 +54,6 @@
 		flex-direction: column;
 
 		justify-content: flex-end;
-		background: blueviolet;
+		background: pink;
 	}
 }
