--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,16 @@
-@import "base";
-@import "contact";
-@import "header";
-@import "typography";
+@import "base/base";
+@import "abstracts/mixin";
+@import "base/typography";
+@import "animations/gallAnimation";
+@import "components/modal";
+@import "components/slider";
+@import "components/typewriter";
+
 @import "navbar";
-@import "gallery";
+@import "header";
 @import "projects";
 @import "card";
-
-@import "abstracts/mixin";
+@import "gallery";
+@import "about";
+@import "contact";
+@import "testimonial";
